36-suites-for-study/suite-32/getslash-slash-188658327.passed.log
travis_fold:start:system_info[0K[33;1mBuild system information[0m
Build language: python
Build group: stable
Build dist: precise
Build id: ''
Job id: ''
[34m[1mBuild image provisioning date and time[0m
Thu Feb  5 15:09:33 UTC 2015
[34m[1mOperating System Details[0m
Distributor ID:	Ubuntu
Description:	Ubuntu 12.04.5 LTS
Release:	12.04
Codename:	precise
[34m[1mLinux Version[0m
3.13.0-29-generic
[34m[1mCookbooks Version[0m
a68419e https://github.com/travis-ci/travis-cookbooks/tree/a68419e
[34m[1mGCC version[0m
gcc (Ubuntu/Linaro 4.6.3-1ubuntu5) 4.6.3
Copyright (C) 2011 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

[34m[1mLLVM version[0m
clang version 3.4 (tags/RELEASE_34/final)
Target: x86_64-unknown-linux-gnu
Thread model: posix
[34m[1mPre-installed Ruby versions[0m
ruby-1.9.3-p551
[34m[1mPre-installed Node.js versions[0m
v0.10.36
[34m[1mPre-installed Go versions[0m
1.4.1
[34m[1mRedis version[0m
redis-server 2.8.19
[34m[1mriak version[0m
2.0.2
[34m[1mMongoDB version[0m
MongoDB 2.4.12
[34m[1mCouchDB version[0m
couchdb 1.6.1
[34m[1mNeo4j version[0m
1.9.4
[34m[1mRabbitMQ Version[0m
3.4.3
[34m[1mElasticSearch version[0m
1.4.0
[34m[1mInstalled Sphinx versions[0m
2.0.10
2.1.9
2.2.6
[34m[1mDefault Sphinx version[0m
2.2.6
[34m[1mInstalled Firefox version[0m
firefox 31.0esr
[34m[1mPhantomJS version[0m
1.9.8
[34m[1mant -version[0m
Apache Ant(TM) version 1.8.2 compiled on December 3 2011
[34m[1mmvn -version[0m
Apache Maven 3.2.5 (12a6b3acb947671f09b81f49094c53f426d8cea1; 2014-12-14T17:29:23+00:00)
Maven home: /usr/local/maven
Java version: 1.7.0_76, vendor: Oracle Corporation
Java home: /usr/lib/jvm/java-7-oracle/jre
Default locale: en_US, platform encoding: ANSI_X3.4-1968
OS name: "linux", version: "3.13.0-29-generic", arch: "amd64", family: "unix"
travis_fold:end:system_info[0K
W: GPG error: http://apt.postgresql.org precise-pgdg Release: The following signatures were invalid: KEYEXPIRED 1562078959
W: Failed to fetch http://ppa.launchpad.net/travis-ci/zero-mq/ubuntu/dists/precise/main/binary-amd64/Packages  403  Forbidden

W: Failed to fetch http://ppa.launchpad.net/travis-ci/zero-mq/ubuntu/dists/precise/main/binary-i386/Packages  403  Forbidden

W: Failed to fetch http://downloads-distro.mongodb.org/repo/debian-sysvinit/dists/dist/10gen/binary-amd64/Packages  Undetermined Error [IP: 52.21.89.200 80]

W: Failed to fetch http://downloads-distro.mongodb.org/repo/debian-sysvinit/dists/dist/10gen/binary-i386/Packages  Undetermined Error [IP: 52.21.89.200 80]

E: Some index files failed to download. They have been ignored, or old ones used instead.
sed: cannot rename /etc/hosts: Device or resource busy
sed: cannot rename /etc/hosts: Device or resource busy
$ cd passed/getslash/slash
travis_time:start:317b0c40[0K$ source ~/virtualenv/python3.4/bin/activate

travis_time:end:317b0c40:start=1616870835320396476,finish=1616870835331197061,duration=10800585[0K$ python --version
Python 3.4.2
$ pip --version
pip 6.0.7 from /home/travis/virtualenv/python3.4.2/lib/python3.4/site-packages (python 3.4)
travis_fold:start:install[0Ktravis_time:start:01cf96b6[0K$ pip install virtualenv
Collecting virtualenv
  Downloading https://files.pythonhosted.org/packages/91/fb/ca6c071f4231e06a9f0c3bd81c15c233bbacd4a7d9dbb7438d95fece8a1e/virtualenv-20.4.3-py2.py3-none-any.whl (7.2MB)
Collecting importlib-resources>=1.0 (from virtualenv)
  Downloading https://files.pythonhosted.org/packages/f0/5e/69e6a0602c1f18d390952177de648468c4a380252858b0022affc3ce7811/importlib_resources-5.1.2-py3-none-any.whl
Collecting appdirs<2,>=1.4.3 (from virtualenv)
  Downloading https://files.pythonhosted.org/packages/3b/00/2344469e2084fb287c2e0b57b72910309874c3245463acd6cf5e3db69324/appdirs-1.4.4-py2.py3-none-any.whl
Collecting filelock<4,>=3.0.0 (from virtualenv)
  Downloading https://files.pythonhosted.org/packages/93/83/71a2ee6158bb9f39a90c0dea1637f81d5eef866e188e1971a1b1ab01a35a/filelock-3.0.12-py3-none-any.whl
Collecting importlib-metadata>=0.12 (from virtualenv)
  Downloading https://files.pythonhosted.org/packages/d4/61/5a799932038cd33f50799c8b539fc58c747cb5ed8082b5dcaa4d90c1cd1a/importlib_metadata-3.8.1-py3-none-any.whl
Collecting distlib<1,>=0.3.1 (from virtualenv)
  Downloading https://files.pythonhosted.org/packages/f5/0a/490fa011d699bb5a5f3a0cf57de82237f52a6db9d40f33c53b2736c9a1f9/distlib-0.3.1-py2.py3-none-any.whl (335kB)
Collecting six<2,>=1.9.0 (from virtualenv)
  Downloading https://files.pythonhosted.org/packages/ee/ff/48bde5c0f013094d729fe4b0316ba2a24774b3ff1c52d924a8a4cb04078a/six-1.15.0-py2.py3-none-any.whl
Collecting zipp>=0.4 (from importlib-resources>=1.0->virtualenv)
  Downloading https://files.pythonhosted.org/packages/0f/8c/715c54e9e34c0c4820f616a913a7de3337d0cd79074dd1bed4dd840f16ae/zipp-3.4.1-py3-none-any.whl
Collecting typing-extensions>=3.6.4 (from importlib-metadata>=0.12->virtualenv)
  Downloading https://files.pythonhosted.org/packages/60/7a/e881b5abb54db0e6e671ab088d079c57ce54e8a01a3ca443f561ccadb37e/typing_extensions-3.7.4.3-py3-none-any.whl
Collecting typing>=3.7.4 (from typing-extensions>=3.6.4->importlib-metadata>=0.12->virtualenv)
  Downloading https://files.pythonhosted.org/packages/05/d9/6eebe19d46bd05360c9a9aae822e67a80f9242aabbfc58b641b957546607/typing-3.7.4.3.tar.gz (78kB)
    /opt/python/3.4.2/lib/python3.4/distutils/dist.py:260: UserWarning: Unknown distribution option: 'project_urls'
      warnings.warn(msg)
    /opt/python/3.4.2/lib/python3.4/distutils/dist.py:260: UserWarning: Unknown distribution option: 'python_requires'
      warnings.warn(msg)
Installing collected packages: typing, typing-extensions, zipp, six, distlib, importlib-metadata, filelock, appdirs, importlib-resources, virtualenv
  Running setup.py install for typing
    /opt/python/3.4.2/lib/python3.4/distutils/dist.py:260: UserWarning: Unknown distribution option: 'python_requires'
      warnings.warn(msg)
    /opt/python/3.4.2/lib/python3.4/distutils/dist.py:260: UserWarning: Unknown distribution option: 'project_urls'
      warnings.warn(msg)




  
  



  
  
  
  


Successfully installed appdirs-1.4.4 distlib-0.3.1 filelock-3.0.12 importlib-metadata-3.8.1 importlib-resources-5.1.2 six-1.15.0 typing-3.7.4.3 typing-extensions-3.7.4.3 virtualenv-20.4.3 zipp-3.4.1

travis_time:end:01cf96b6:start=1616870835711906297,finish=1616870840274089546,duration=4562183249[0Ktravis_fold:end:install[0Ktravis_time:start:2c262c7d[0K$ make env
python -m virtualenv .env
Traceback (most recent call last):
  File "/opt/python/3.4.2/lib/python3.4/runpy.py", line 151, in _run_module_as_main
    mod_name, mod_spec, code = _get_module_details(mod_name)
  File "/opt/python/3.4.2/lib/python3.4/runpy.py", line 118, in _get_module_details
    return _get_module_details(pkg_main_name)
  File "/opt/python/3.4.2/lib/python3.4/runpy.py", line 104, in _get_module_details
    spec = importlib.util.find_spec(mod_name)
  File "/home/travis/virtualenv/python3.4.2/lib/python3.4/importlib/util.py", line 86, in find_spec
    parent = __import__(parent_name, fromlist=['__path__'])
  File "/home/travis/virtualenv/python3.4.2/lib/python3.4/site-packages/virtualenv/__init__.py", line 3, in <module>
    from .run import cli_run, session_via_cli
  File "/home/travis/virtualenv/python3.4.2/lib/python3.4/site-packages/virtualenv/run/__init__.py", line 13, in <module>
    from .plugin.activators import ActivationSelector
  File "/home/travis/virtualenv/python3.4.2/lib/python3.4/site-packages/virtualenv/run/plugin/activators.py", line 6, in <module>
    from .base import ComponentBuilder
  File "/home/travis/virtualenv/python3.4.2/lib/python3.4/site-packages/virtualenv/run/plugin/base.py", line 9, in <module>
    from importlib_metadata import entry_points
  File "/home/travis/virtualenv/python3.4.2/lib/python3.4/site-packages/importlib_metadata/__init__.py", line 94
    dist: Optional['Distribution'] = None
        ^
SyntaxError: invalid syntax
make: *** [.env/.up-to-date] Error 1

travis_time:end:2c262c7d:start=1616870840284853503,finish=1616870840465435155,duration=180581652[0K
[31;1mThe command "make env" exited with 2.[0m
travis_time:start:1a944aa0[0K$ .env/bin/pip install lxml
/usr/local/bin/run_passed.sh: line 62: .env/bin/pip: No such file or directory

travis_time:end:1a944aa0:start=1616870840478077442,finish=1616870840489424686,duration=11347244[0K
[31;1mThe command ".env/bin/pip install lxml" exited with 127.[0m
travis_time:start:1b4753e9[0K$ .env/bin/py.test tests -k 'xunit and session and errors'
/usr/local/bin/run_passed.sh: line 62: .env/bin/py.test: No such file or directory

travis_time:end:1b4753e9:start=1616870840501067266,finish=1616870840512745691,duration=11678425[0K
[31;1mThe command ".env/bin/py.test tests -k 'xunit and session and errors'" exited with 127.[0m
travis_fold:start:after_failure[0Ktravis_time:start:03aefaad[0K$ .env/bin/pip freeze
/usr/local/bin/run_passed.sh: line 62: .env/bin/pip: No such file or directory

travis_time:end:03aefaad:start=1616870840525367275,finish=1616870840535650490,duration=10283215[0Ktravis_fold:end:after_failure[0K
Done. Your build exited with 1.
